Add optifine to docker build